# dbshell

./: CLAUDE.md  Cargo.toml  DESIGN.md  README.md  ROADMAP.md
crates/dbshell-core/: Cargo.toml
crates/dbshell-core/src/: cache.rs  command_line.rs  db_type.rs  driver.rs  embedder.rs  error.rs  filter.rs  graph.rs  lib.rs  merge.rs  operation.rs  pipeline.rs  record.rs  result.rs  result_store.rs  router.rs  search.rs  session.rs  tool_kind.rs  vfs.rs  vfs_path.rs  view.rs
crates/dbshell-core/tests/: command_line_tests.rs  pipeline_tests.rs  vfs_path_tests.rs  vfs_resolve_tests.rs
crates/dbshell-drivers/: Cargo.toml
crates/dbshell-drivers/src/: memory.rs
crates/dbshell-drivers/tests/: memory_driver_tests.rs  session_tests.rs
crates/dbshell-mcp/: Cargo.toml
crates/dbshell-mcp/src/: lib.rs
crates/dbshell-py/: Cargo.toml
crates/dbshell-py/src/: lib.rs
crates/dbshell-tools/: Cargo.toml
crates/dbshell-tools/src/: lib.rs
