[package]
name = "dbshell-drivers"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
dbshell-core.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
